# natural-code

./: .gitignore  AGENTS.md  LICENSE  README.md  chat_func.py  cli.py  command.py  diff.py  pyproject.toml  requirements.txt  test_main.py  tui.py
.github/workflows/: ci.yml
natural_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
