[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "natural-code"
version = "0.1.0"
description = "A natural language code transpiler that converts .n<language> files into executable code"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["transpiler", "natural-language", "code-generation", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.1",
    "rich>=12.4.0",
    "rich-cli>=1.8.1",
    "groq>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/idhant297/natural-code"
Repository = "https://github.com/idhant297/natural-code"
Issues = "https://github.com/idhant297/natural-code/issues"

[project.scripts]
nrun = "tui:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["tui", "cli", "diff", "command"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
